tests/macros/expand/filter.stderr
error: option `filter` does not exist for kind `expand`
 --> $DIR/filter.rs:2:44
  |
2 |     let q = discourse::questions![Expand { filter: todo!() }];
  |                                            ^^^^^^
