tests/macros/expand/filter.rs
fn main() {
    let q = discourse::questions![Expand { filter: todo!() }];
}
